2005-09-13  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/package.rb (TarInput::initialize): Removed
	requirement for SSL when signatures are found in a gem.  Only
	require SSL if the security policy requires checking the
	signatures.

	* lib/rubygems/custom_require.rb (Kernel::require): Disabled
	autorequire during custom require.

2005-09-07  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/gem_openssl.rb (Gem::ensure_ssl_available): Added a
	test in gem_openssl to make sure the ruby portion of ssl is also
	loaded.

2005-08-31  Jim Weirich  <jim@weirichhouse.org>

	* Rakefile (install): Changed the rake install task to use setup.rb.

2005-07-08  Chad Fowler  <chad@chadfowler.com>

	* lib/rubygems/remote_installer.rb: Applied Daniel Roux's patch
        to make RubyGems work with authenticating proxies.

2005-07-08  Jim Weirich  <jim@weirichhouse.org>

	* Preparing for release 0.8.11.

2005-06-12  Jim Weirich  <jim@weirichhouse.org>

	* lib/rubygems/installer.rb
	(Gem::Installer::installation_satisfies_dependency): Refactored
	dependency check into ensure_dependency! and
	installation_satisfies_dependency?.

2005-06-12  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems.rb,lib/rubygems/installer.rb: Applied Mark Hubbart's
	* lib/rubygems/remote_installer.rb: Applied David Glasser's install-
	* Applied Paul Duncan's incredibly complete gem signing patch.
	Thanks, Paul!
	* lib/rubygems/installer.rb: Fixed bug in installer that caused
	dependency installation not to work.

2005-06-06  Chad Fowler  <chad@chadfowler.com>
	* lib/rubygems/specification.rb: Fixed Erik hatcher's reported bug
	of gem directories having "-" at the end of their names (e.g.
	"BlueCloth-1.0.0-".

2005-06-01  Jim Weirich  <jim@weirichhouse.org>

	* scripts/specdoc.rb (_resolve_links): Updated to generate hieraki
	format so it can be included in the docs.rubygems.org site.

	* test/test_specification.rb (TestSpecification::test_to_ruby):