@@ -1,3 +1,7 @@
+2005-10-31  Chad Fowler  <chad@chadfowler.com>
+       * lib/rubygems/installer.rb: Tilman Sauerbeck's patch to support
+        extensions built with Rake!
+
 2005-09-13  Jim Weirich  <jim@weirichhouse.org>
 
 	* lib/rubygems/package.rb (TarInput::initialize): Removed
